# cosmos-gravity-bridge

./: .gitignore
.github/workflows/: integration-tests.yml
deploy/single-node-runner-rinkeby/scripts/: run-with-remote-eth.sh  run.sh
module/: Makefile  go.mod  go.sum
module/app/: app.go
orchestrator/cosmos_gravity/: Cargo.toml
orchestrator/cosmos_gravity/src/: query.rs  send.rs
orchestrator/ethereum_gravity/src/: logic_call.rs  utils.rs
orchestrator/gbt/: Cargo.toml
orchestrator/gbt/src/: args.rs  config.rs  default-config.toml  main.rs  orchestrator.rs  relayer.rs
orchestrator/gbt/src/client/: cosmos_to_eth.rs  deploy_erc20_representation.rs  eth_to_cosmos.rs
orchestrator/gravity_utils/: Cargo.toml
orchestrator/gravity_utils/src/: connection_prep.rs  error.rs  lib.rs
orchestrator/orchestrator/: Cargo.toml
orchestrator/orchestrator/src/: ethereum_event_watcher.rs  main_loop.rs
orchestrator/relayer/src/: batch_relaying.rs  find_latest_valset.rs  logic_call_relaying.rs  main_loop.rs  valset_relaying.rs
orchestrator/test_runner/: Cargo.toml
solidity/: hardhat.config.ts
solidity/contracts/: CosmosToken.sol  Gravity.sol  HashingTest.sol  ReentrantERC20.sol  SigningTest.sol  SimpleLogicBatch.sol  TestERC20A.sol  TestERC20B.sol  TestERC20C.sol  TestERC20WNOM.sol  TestLogicContract.sol  TestTokenBatchMiddleware.sol
solidity/test-utils/: index.ts
tests/: all-up-test.sh  build-container.sh
tests/container-scripts/: all-up-test-internal.sh  integration-tests.sh  run-eth.sh  setup-validators.sh
tests/dockerfile/: Dockerfile
(+17 files in other folders)
